--- a/extensions.json
+++ b/extensions.json
@@ -1,7 +1,8 @@
 {
     // See https://go.microsoft.com/fwlink/?LinkId=827846 to learn about workspace recommendations.
     // Extension identifier format: ${publisher}.${name}. Example: vscode.csharp
-  
+    // refer https://github.com/wesbos/dotfiles/blob/master/vs-code-extensions-i-use.md
+    
     // List of extensions which should be recommended for users of this workspace.
     "recommendations": ["dbaeumer.vscode-eslint", "esbenp.prettier-vscode", "sdras.night-owl", "pkief.material-icon-theme","johnpapa.vscode-peacock"],
     // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
